# axum-workshop

./: .gitignore  Cargo.toml
src/: handlers.rs  main.rs  middlewares.rs  routes.rs  server.rs
